# ncursesFM

./: .build.yml  .gitignore  .travis.yml  CMakeLists.txt  Changelog  PKGBUILD  README.md  TODO  TODO.md  fm_functions.c  helper_functions.c  helper_functions.h  index.html  main.c  makefile  ncursesFM  ncursesFM.c  ncursesFM.conf  ncursesfm  ncursesfm_previewer  params.json  quit_functions.c  ui_functions.c
Arch/: PKGBUILD
Script/: ncursesFM  ncursesFM.conf
cmake/: FindLibmagic.cmake
inc/: archiver.h  bookmarks.h  config.h  declarations.h  devices.h  fm.h  fm_functions.h  git_fetch.h  inhibit.h  install_package.h  log.h  mount.h  notify.h  print.h  quit.h  quit_functions.h  search.h  shasum.h  string_constants.h  sysinfo.h  time.h  ui.h  ui_functions.h  utils.h  version.h  worker_thread.h
msg/: CMakeLists.txt  de.po  es_AR.po  fr.po  it.po  ncursesFM.pot
msg/de/: CMakeLists.txt  de.po
msg/es_AR/: CMakeLists.txt
msg/fr/: CMakeLists.txt  fr.po
msg/it/: CMakeLists.txt
src/: archiver.c  bookmarks.c  config.c  declarations.h  devices.c  fm.c  fm_functions.c  fm_functions.h  git_fetch.c  helper_functions.c  helper_functions.h  inhibit.c  install_package.c  log.c  main.c  mount.c  notify.c  print.c  quit.c  quit_functions.c  quit_functions.h  search.c  shasum.c  string_constants.c  string_constants.h  sysinfo.c  time.c  timer.c  ui.c  ui_functions.c  ui_functions.h  utils.c  version.c  worker_thread.c
